<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".modules.auth.login.ui.LoginActivity">

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

                <AutoCompleteTextView
                    android:id="@+id/v_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/v_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            <Button
                android:id="@+id/v_email_sign_in_button"
                style="@style/MsButtonLarge.Default"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <Button
                android:id="@+id/v_fb_sign_in_button"
                style="@style/MsButtonLarge"
                android:background="@drawable/selector_login_via_fb_button"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/action_sign_in_via_fb"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <Button
                android:id="@+id/v_google_sign_in_button"
                style="@style/MsButtonLarge.Danger"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_sign_in_via_google_plus"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/do_not_have_any_account"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/v_register_button"
                style="@style/MsButtonLarge.Primary"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
</LinearLayout>